# smoldynutils

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: formatandlint.yml  tests.yml
src/smoldynutils/: __init__.py  data_objects.py  metrics.py  parsing.py  plots.py  utils.py  workflows.py
tests/: test_data.py  test_import.py  test_metrics.py  test_parser.py  test_plots.py  test_utils.py  test_workflows.py
tests/integration/: test_diffconst_estimate.py
tests/test_data/: test_count.txt  test_molpos.txt
